--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.27.2",
     "expo": "46.0.0",
     "expo-app-loading": "~2.1.0",
+    "expo-auth-session": "~3.7.1",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
